Moved models folder to JacksonsBooks.Models changed the filder name to ViewModels and the namespace to reflect this. Added project referance to JacksonsBooks.Models and DataAccess for JacksonsBookStore built project

--- a/JacksonsBookStore/JacksonsBookStore.csproj
+++ b/JacksonsBookStore/JacksonsBookStore.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JacksonsBooks.DataAccess\JacksonsBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\JacksonsBooks.Models\JacksonsBooks.Models.csproj" />
+  </ItemGroup>
+
 </Project>
