replaced all referances of ErrorViewModel to JacksonsBookStore.Models.ViewModels.ErrorViewModel
in start up commented out:
using JacksonsBookStore.Data;
and added
using JacksonsBookStore.DataAccess.Data;

added SD.cs class to Utility
added reference to Utility and Models to the DataAccess project

--- a/JacksonsBookStore/JacksonsBookStore.csproj
+++ b/JacksonsBookStore/JacksonsBookStore.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\JacksonsBooks.DataAccess\JacksonsBooks.DataAccess.csproj" />
     <ProjectReference Include="..\JacksonsBooks.Models\JacksonsBooks.Models.csproj" />
+    <ProjectReference Include="..\JacksonsBooks.Utility\JacksonsBooks.Utility.csproj" />
   </ItemGroup>
 
 </Project>
