--- a/JacksonsBooks.DataAccess/JacksonsBooks.DataAccess.csproj
+++ b/JacksonsBooks.DataAccess/JacksonsBooks.DataAccess.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JacksonsBooks.Models\JacksonsBooks.Models.csproj" />
+    <ProjectReference Include="..\JacksonsBooks.Utility\JacksonsBooks.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
