--- a/JacksonsBookStore/JacksonsBookStore.csproj
+++ b/JacksonsBookStore/JacksonsBookStore.csproj
@@ -14,12 +14,17 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\JacksonsBooks.DataAccess\JacksonsBooks.DataAccess.csproj" />
     <ProjectReference Include="..\JacksonsBooks.Models\JacksonsBooks.Models.csproj" />
     <ProjectReference Include="..\JacksonsBooks.Utility\JacksonsBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
